--- a/Dimas.html
+++ b/Dimas.html
@@ -6,35 +6,33 @@
     <title>Portofolio Dimas XI-RPL</title>
     <link rel="stylesheet" href="Dimas.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" 
-    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />"
+          integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
+          crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
     <header class="header">
         <a href="#" class="logo">Langen</a>
         <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#about " class="active2">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#skills">Skills</a>
-        <a href="DimasGalery.html">Galery</a>
-        <a href="#contact">Contact</a>
+            <a href="#home" class="active">Home</a>
+            <a href="#about" class="active2">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#skills">Skills</a>
+            <a href="DimasGalery.html">Galery</a>
+            <a href="#contact">Contact</a>
         </nav>
-
     </header>
 
-    <section id ="home"class="home">
+    <section id="home" class="home">
         <div class="home-img">
             <img src="Gambar Dimas/Dimasbg.png" alt="">
         </div>
         <div class="home-content">
-            <h1 style="margin-top: 80px;" >Hi, It's </h1>
-                <span>Langen Dimas Pramudya</span>
+            <h1 style="margin-top: 80px;">Hi, It's </h1>
+            <span>Langen Dimas Pramudya</span>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p style="font-size: 1.5rem;">Kreator desain dan pengembang web yang bersemangat dalam menciptakan solusi digital yang elegan dan fungsional. Dengan pengalaman bertahun-tahun dalam UI/UX design dan web development, saya telah membantu berbagai klien untuk merealisasikan visi mereka melalui desain yang intuitif dan kode yang bersih.</p>
             <a href="#contact" class="btn">Hire Me</a>
         </div>
-
     </section>
 
     <section id="about" class="about-section">
@@ -49,7 +47,6 @@
             </div>
         </div>
     </section>
-
 
     <section id="portfolio" class="portfolio-section">
         <h2 class="section-title">Proyek Utama</h2>
@@ -101,19 +98,19 @@
             <div class="row" id="skillsContainer">
                 <div class="bar">
                     <div class="info">
-                        <img src="Gambar Skills/download__5_-removebg-preview.png" width="60px" height="60px" style="display: inline-block;" >
+                        <img src="Gambar Skills/download__5_-removebg-preview.png" width="60px" height="60px" style="display: inline-block;">
                         <span style="font-size: 20px;">Figma</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="Gambar Skills/OIP__2_-removebg-preview.png" width="60px" height="60px" style="display: inline-block;" >
-                        <span style="font-size: 20px;">Pyhton</span>
+                        <img src="Gambar Skills/OIP__2_-removebg-preview.png" width="60px" height="60px" style="display: inline-block;">
+                        <span style="font-size: 20px;">Python</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="Gambar Skills/OIP__1_-removebg-preview.png" width="60px" height="60px" style="display: inline-block;" >
+                        <img src="Gambar Skills/OIP__1_-removebg-preview.png" width="60px" height="60px" style="display: inline-block;">
                         <span style="font-size: 20px;">HTML</span>
                     </div>
                 </div>
@@ -125,38 +122,36 @@
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="Gambar Skills/unduhan-removebg-preview.png" width="60px" height="60px" style="display: inline-block;" >
+                        <img src="Gambar Skills/unduhan-removebg-preview.png" width="60px" height="60px" style="display: inline-block;">
                         <span style="font-size: 18px;">JavaScript</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="Gambar Skills/unduhan__2_-removebg-preview.png"width="60px" height="60px" style="display: inline-block;" >
+                        <img src="Gambar Skills/unduhan__2_-removebg-preview.png" width="60px" height="60px" style="display: inline-block;">
                         <span style="font-size: 20px;">C++</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="Gambar Skills/logo-mobile-legends-removebg-preview.png" width="60px" height="60px" style="display: inline-block;" >
-                        <span style="font-size: 20px;" >MLBB</span>
+                        <img src="Gambar Skills/logo-mobile-legends-removebg-preview.png" width="60px" height="60px" style="display: inline-block;">
+                        <span style="font-size: 20px;">MLBB</span>
                     </div>
                 </div>
                 <div class="bar">
                     <div class="info">
-                        <img src="Gambar Skills/R-removebg-preview.png" width="60px" height="60px" style="display: inline-block;" >
-                        <span style="font-size: 20px;" >Roblox</span>
+                        <img src="Gambar Skills/R-removebg-preview.png" width="60px" height="60px" style="display: inline-block;">
+                        <span style="font-size: 20px;">Roblox</span>
                     </div>
                 </div>
-
             </div>
         </div>
-
     </section>
     
     <section class="education" id="education">
         <p>Edu</p>
         <h2 class="heading">My Education</h2>
-        <div  class="timeline">
+        <div class="timeline">
             <div class="container right">
                 <div class="content">
                     <div class="tag">
@@ -164,7 +159,7 @@
                         <img src="Education/TK.png" alt="icon TK" class="icon">
                     </div>
                     <div class="desc">
-                        <p> Saya memulai sekolah saya pertama di TK atau Taman Kanak-kanak, saya bersekolah di TK Aisyiyah 87 di Pisangan Timur, Jakarta Timur, DKI Jakarta</p>
+                        <p>Saya memulai sekolah saya pertama di TK atau Taman Kanak-kanak, saya bersekolah di TK Aisyiyah 87 di Pisangan Timur, Jakarta Timur, DKI Jakarta</p>
                     </div>
                 </div>
             </div>
@@ -172,7 +167,7 @@
                 <div class="content">
                     <div class="tag">
                         <h2>SD</h2>
-                        <img src="Education/SD.png" alt="icon TK" class="icon">
+                        <img src="Education/SD.png" alt="icon SD" class="icon">
                     </div>
                     <div class="desc">
                         <p>Setelah TK saya melanjutkan ke jenjang SD di SDN Pisangan Timur 18 Pagi, Jakarta Timur, DKI Jakarta</p>
@@ -183,7 +178,7 @@
                 <div class="content">
                     <div class="tag">
                         <h2>SMP</h2>
-                        <img src="Education/SMP.png" alt="icon TK" class="icon">
+                        <img src="Education/SMP.png" alt="icon SMP" class="icon">
                     </div>
                     <div class="desc">
                         <p>Setelah tamat SD, saya melanjutkan sekolah di SMPN 44 Jakarta</p>
@@ -194,10 +189,10 @@
                 <div class="content">
                     <div class="tag">
                         <h2>SMK</h2>
-                        <img src="Education/SMK.png" alt="icon TK" class="icon">
+                        <img src="Education/SMK.png" alt="icon SMK" class="icon">
                     </div>
                     <div class="desc">
-                        <p>Selesai sudah SMP, lalu saya melajutkan lagi bersekolah di SMKN 40 Jakarta</p>
+                        <p>Selesai sudah SMP, lalu saya melanjutkan lagi bersekolah di SMKN 40 Jakarta</p>
                     </div>
                 </div>
             </div>
@@ -205,7 +200,7 @@
                 <div class="content">
                     <div class="tag">
                         <h2>Harvard University</h2>
-                        <img src="Education/UNIVERSITAS.png" alt="icon TK" class="icon">
+                        <img src="Education/UNIVERSITAS.png" alt="icon Universitas" class="icon">
                     </div>
                     <div class="desc">
                         <p>Coming soon</p>
@@ -222,11 +217,11 @@
             <div class="input-box">
                 <input type="text" name="name" placeholder="Name" required>
                 <input type="email" placeholder="Email" required>
-                <input type="Number" placeholder="Phone Number" required>
+                <input type="number" placeholder="Phone Number" required>
                 <input type="text" placeholder="Subject" required>
             </div>
             <textarea name="" id="" cols="30" rows="5" placeholder="Your Message"></textarea>
-            <input type="submit" value="Send Massage" class="btn">
+            <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
 
