--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="about" class="about-section">
         <div class="about-text">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Saya Langen Dimas Pramudya, seorang programmer handal dengan pengalaman lebih dari 5 tahun dalam pengembangan perangkat lunak. Saya memiliki keahlian dalam berbagai bahasa pemrograman, termasuk JavaScript, Python, dan Java, serta pengalaman dalam pengembangan aplikasi web dan mobile.</p>
             <div class="social-icon">
                 <a href="https://www.tiktok.com/@dimasp_03?_t=8r0yFytCeH2&_r=1" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
                 <a href="https://youtube.com/@langendimaspramudya5261?si=BpbmHwU7wWhydx52" target="_blank"><i class="fa-brands fa-youtube"></i></a>
